feat: add section IDs to carousel and social media components

--- a/src/components/Carosuel/Presentacion.astro
+++ b/src/components/Carosuel/Presentacion.astro
@@ -14,7 +14,7 @@
     class="w-full h-svh bg-[url('/Images/Carrusel/Image4.jpg')] bg-cover bg-repeat-none bg-size bg-center p-4 mb-4"
 
     -->
-<section class="Presentacion h-svh mb-4">
+<section class="Presentacion h-svh mb-4" id="Inicio">
   <article class="text-white text-xl font-bold p-4 ">
     <h2 class=" text-4xl m-4 text-center"> ¡¡ Bienvenidos !!</h2>
     <p class="m-auto text-pretty">
