--- a/src/components/Newtworks/IconsNewtworks.astro
+++ b/src/components/Newtworks/IconsNewtworks.astro
@@ -2,7 +2,7 @@
 import Icon from "../ComponentsIcons/Icon.astro";
 ---
 
-<section class="RedSocial p-2">
+<section class="RedSocial p-2" id="Redes">
   <h2 class="text-center m-2 text-2xl">Redes Sociales - Organizaciones:</h2>
   <ul class="flex justify-evenly items-center m-2">
     <li>
