chore: update teacher names and titles

--- a/src/components/CardTeacher/LogicCard.astro
+++ b/src/components/CardTeacher/LogicCard.astro
@@ -9,7 +9,7 @@ import { DOCENTES } from "./Docentes.js";
       <article class="border-4 rounded-lg border-green-950 m-2 p-2 bg-emerald-950 hover:bg-emerald-800">
         <div class="flex m-2 text-white/95">
           <img src={image} alt={alt} />
-          <p class="m-2 text-2xl">
+          <p class="m-2 text-lg">
             <strong>{Nombre}</strong>
           </p>
         </div>
