--- a/src/pages/SingUp.astro
+++ b/src/pages/SingUp.astro
@@ -1,8 +1,10 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import Input from "../components/Input/InputLogin.astro";
+// import Input from "../components/Input/InputLogin.astro";
+import FormSingup from "../components/Input/FormSingup.astro"
 ---
 
 <Layout title="Esucela Primaria | Registro">
-    <Input>
+    <!-- <Input> -->
+    <FormSingup />
 </Layout>
