chore: Update password input type to "password" and add signout API endpoint

--- a/src/components/Input/FormSingup.astro
+++ b/src/components/Input/FormSingup.astro
@@ -10,17 +10,17 @@ import "./form.css"
   <section class="sectionForm">
     <label>
       <span>Nombre del Alumno: </span>
-      <input type="text" name="name" placeholder="Nombre" required />
+      <input type="text" name="username" placeholder="Nombre" required />
     </label>
     <label>
       <span>Segundo Nombre: </span>
-      <input type="text" name="nameTwo" placeholder="Segundo Nombre" />
+      <input type="text" name="segundoNombre" placeholder="Segundo Nombre" />
     </label>
     <label>
       <span>Apellido Paterno: </span>
       <input
         type="text"
-        name="apellidoPA"
+        name="ApellidoPaterno"
         placeholder="Primer Apellido"
         required
       />
@@ -29,7 +29,7 @@ import "./form.css"
       <span>Apellido Materno: </span>
       <input
         type="text"
-        name="apellidoMA"
+        name="ApellidoMaterno"
         placeholder="Segundo Apellido"
         required
       />
@@ -50,7 +50,7 @@ import "./form.css"
       <span>Apellido Paterno: </span>
       <input
         type="text"
-        name="apellidoMT"
+        name="apellidoTutorP"
         placeholder="Primer Apellido"
         required
       />
@@ -59,7 +59,7 @@ import "./form.css"
       <span>Apellido Materno: </span>
       <input
         type="text"
-        name="apellidoPT"
+        name="apellidoTutorM"
         placeholder="Segundo Apellido"
         required
       />
@@ -83,7 +83,7 @@ import "./form.css"
       <span>Confirmar contraseña:</span>
       <input
         type="password"
-        name="ConfirmPassword"
+        name="passwordConfirm"
         placeholder="password"
         required
       />
