--- a/src/components/Input/InputSing.astro
+++ b/src/components/Input/InputSing.astro
@@ -16,7 +16,7 @@ import Submit from "./Submit.astro";
   <label class="flex p-2">
     <span class="text-base m-2 p-2">Contraseña</span>
     <input
-      type="text"
+      type="password"
       class="border-2 border-solid rounded focus:outline-none focus:border-emerald-950"
     />
   </label>
