--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import  SpeedInsights  from "@vercel/speed-insights/astro"
 import { Image } from "astro:assets";
 import SEP from "../../public/Images/Icons/SEP.png";
 import SEPH from "../../public/Images/Icons/SEPH.png";
@@ -26,6 +27,7 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body>
+    <SpeedInsights />
     <header>
       <section class="w-11/12 p-2 flex justify-between items-center m-auto">
         <a href="https://www.gob.mx/sep">
